code cleanu pand param validation
